@@ -3,6 +3,8 @@ Revision history for perl distribution Mojo-IRC
 0.31 Not Released
  - Add Test::Mojo::IRC->server attribute
  - Add Test::Mojo::IRC->start_server can be called as a class method
+ - Change channel_topic() to return {topic => "..."}
+ - Fix channel_topic() return value on error
 
 0.30 2016-03-22T12:00:55+0100
  - Fix channels() on error to return hash-ref
